--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "dompdf/dompdf": "^3.0",
+        "google/apiclient": "^2.18",
         "google/apiclient-services": "^0.411.0",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^11.0",
